refactored creating formula functionality
