# docs/swagger.json
@@ -2166,6 +2166,51 @@
             }
         },
         "/formula": {
+            "get": {
+                "description": "Gel All formulas",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "formula"
+                ],
+                "summary": "Get All formulas",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Formula"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create Formula",
                 "consumes": [
@@ -2258,6 +2303,59 @@
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/formula/{id}/details": {
+            "get": {
+                "description": "Gel formula Details",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "contracts"
+                ],
+                "summary": "Get formula Details",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id of formula",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Formula"
                         }
                     },
                     "400": {
@@ -5152,6 +5250,9 @@
                 "sales_day_count": {
                     "type": "number"
                 },
+                "store_code": {
+                    "type": "string"
+                },
                 "total_store_count": {
                     "type": "number"
                 }
@@ -5211,6 +5312,9 @@
                 "no_sales_no_remainder_to_order": {
                     "type": "number"
                 },
+                "organization": {
+                    "type": "string"
+                },
                 "packing_norm": {
                     "type": "boolean"
                 },
@@ -5219,6 +5323,12 @@
                 },
                 "sales_less_than_mtz": {
                     "type": "boolean"
+                },
+                "schedule": {
+                    "$ref": "#/definitions/models.Schedule"
+                },
+                "store_house": {
+                    "type": "string"
                 },
                 "transit_good_dister_days": {
                     "type": "integer"
@@ -5737,6 +5847,39 @@
                 },
                 "total": {
                     "type": "number"
+                }
+            }
+        },
+        "models.Schedule": {
+            "type": "object",
+            "properties": {
+                "everyDay": {
+                    "type": "object",
+                    "properties": {
+                        "every": {
+                            "type": "integer"
+                        },
+                        "is_selected": {
+                            "type": "boolean"
+                        },
+                        "options": {
+                            "type": "array",
+                            "items": {
+                                "type": "object",
+                                "properties": {
+                                    "is_selected": {
+                                        "type": "boolean"
+                                    },
+                                    "name": {
+                                        "type": "string"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "time": {
+                    "type": "string"
                 }
             }
         },
